--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 </head>
 <body>
-    <p>BETA de la BETA <br> boutades aléatoire
+    <p>BETA de la BETA <br> boutades aléatoire (même la première)
     </p>
     <div class="blague-container">
         <h2>Blague du jour</h2>
